# cf2amp-serverupdater

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.web.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
cf2amp/: backup.py  cli.py  config.py  curseforge.py  delta.py  fallbacks.py  models.py  orchestrator.py  state.py  updater.py  validator.py
cf2amp_web/: amp.py  jobs.py  main.py  settings.py
cf2amp_web/static/: app.css  app.js
cf2amp_web/templates/: index.html
config/: example.config.json  example.config.yaml  local-server-pack.config.yaml
deploy/ubuntu/: .env.example  README.md  cf2amp-update.service  cf2amp-update.timer  config.yaml  docker-compose.web.yml  docker-compose.yml
docs/: DESIGN.md
samples/server/: README.md
scripts/: update.sh
tests/: test_updater.py  test_web_settings.py
