[project]
name = "cf2amp-serverupdater"
version = "0.1.0"
description = "Update Minecraft servers from CurseForge modpacks, preferring server packs."
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
cf2amp = "cf2amp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
