[project]
name = "cf2amp-serverupdater"
version = "0.1.0"
description = "Update Minecraft servers from CurseForge modpacks, preferring server packs."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
cf2amp = "cf2amp.cli:main"
cf2amp-web = "cf2amp_web.main:main"

[tool.setuptools.package-data]
cf2amp_web = ["templates/*.html", "static/*"]

[tool.setuptools.packages.find]
include = ["cf2amp", "cf2amp_web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
